Gave the logo and the animation a fixed width and height
I did it to prevent layout shifts on page load

--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -58,7 +58,10 @@ section.ads {
   position: relative;
   @include flex(center, center, column);
   img {
+    width: 65rem;
+    height: 43rem;
     margin: 2rem 0;
+    object-fit: contain;
   }
 }
 
