--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -10,6 +10,14 @@
     width: 80%;
     margin: auto;
     @include flex(center, space-between, row);
+    .logo {
+      width: 17.5rem;
+      height: 7rem;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
     .veganburger {
       padding: 1rem 1rem;
       border: solid 0.1rem $default-color;
