--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,14 @@ footer p {
   justify-content: space-between;
   flex-direction: row;
 }
+.nav-wrapper nav .logo {
+  width: 17.5rem;
+  height: 7rem;
+}
+.nav-wrapper nav .logo img {
+  width: 100%;
+  height: 100%;
+}
 .nav-wrapper nav .veganburger {
   padding: 1rem 1rem;
   border: solid 0.1rem black;
@@ -271,7 +279,11 @@ section.ads {
   flex-direction: column;
 }
 section.ads img {
+  width: 65rem;
+  height: 43rem;
   margin: 2rem 0;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media screen and (max-width: 834px) {
